<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/text_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                app:layout_constraintTop_toBottomOf="@+id/tvLogout">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="ducxomme@gmail.com"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:inputType="none"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tên"
                    tools:text="Nguyen Huu Duc"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tilName"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginStart="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="@dimen/text_size"
                    android:layout_marginEnd="@dimen/margin"/>

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/male"
                    android:checked="true"
                    android:layout_marginEnd="@dimen/margin"/>

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/female"
                    android:checked="false"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rgGender"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Số điện thoại"
                    tools:text="0164517848560"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cập nhập"
                app:layout_constraintTop_toBottomOf="@id/tilPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvMyRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phòng của bạn"
                app:layout_constraintTop_toBottomOf="@id/btnUpdate"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMyRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvMyRoom">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
